--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,61 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-
 .weather-app {
-  background-color: #fff;
-  max-width: 600px;
+  background-color: royalblue;
+  max-width: 650px;
   margin: 0 auto;
   padding: 30px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 250px 250px 10px 10px;
+}
+.weather-app-info {
+  background: linear-gradient(to bottom, rgba(65, 105, 255, 0.3), royalblue);
+  color: #fff;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+.weather-icon {
+  font-size: 80px;
+  margin: 5px;
+  text-align: center;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.city-search {
+  display: flex;
+  gap: 10px;
+}
+.city-search input[type="search"] {
+  padding: 10px;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  width: 300px;
+  outline: none;
+}
+.city-search input[type="submit"] {
+  padding: 10px;
+  border: none;
+  background-color: yellow;
+  color: black;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color, 0.3s, ease-in-out;
+}
+.city-search input[type="submit"]:hover {
+  background-color: rgba(255, 213, 0, 1);
+}
+
+main {
+  font-size: 30px;
+  flex: 1;
+  text-align: center;
 }
