--- a/src/style.css
+++ b/src/style.css
@@ -81,9 +81,17 @@ main {
   font-size: 18px;
 }
 .current-temp {
-  font: 180px;
-  flex: 1;
-  text-align: left;
+  font-size: 100px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+}
+.current-temp-unit {
+  font-size: 40px;
+  position: relative;
+  top: -20px;
 }
 .city-info,
 .weather-info {
@@ -93,7 +101,9 @@ main {
 
 .five-day-forecast {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
   gap: 10px;
   padding: 5px;
   margin-top: 10px;
