--- a/src/style.css
+++ b/src/style.css
@@ -20,11 +20,22 @@ body {
   padding: 30px;
   border-radius: 10px;
 }
-
+#weather-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
 .weather-icon {
   font-size: 80px;
   margin: 5px;
   text-align: center;
+}
+.weather-icon img {
+  width: 80px;
+  height: 80px;
+  display: block;
 }
 
 header {
