--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@ body {
   margin: 0 auto;
   padding: 30px;
   border-radius: 10px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 250px 250px 10px 10px;
 }
 #weather-icon-container {
   display: flex;
@@ -27,16 +29,15 @@ body {
   width: 100%;
   margin-top: 10px;
 }
+#weather-icon {
+  width: 80px;
+  height: 80px;
+}
 .weather-icon {
   display: flex;
   justify-content: center;
   width: 100%;
   margin-top: 10px;
-}
-.weather-icon p {
-  font-size: 80px;
-  margin: 0px;
-  text-align: center;
 }
 .weather-icon img {
   width: 80px;
